--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -42,6 +42,10 @@
             margin: 0 20px 20px 0;
             padding: 0;
             width: 150px;
+
+            &:hover {
+                cursor: move;
+            }
         }
 
         a.image-delete {
