--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -1,13 +1,4 @@
-.clearfix() {
-  &:before,
-  &:after {
-    content: " "; // 1
-    display: table; // 2
-  }
-  &:after {
-    clear: both;
-  }
-}
+@import "mixins.less";
 
 #wegal-submitdiv {
     &.postbox {
@@ -35,7 +26,7 @@
         position: relative;
 
         img {
-             border-radius: 2px;
+            border-radius: 2px;
             box-shadow: 0 1px 4px 0 #A5A5A5;
             cursor: pointer;
             height: 150px;
