--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 ul.wegallery-gallery {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 10px;
   overflow: hidden;
   width: 100%;
 }
@@ -28,6 +28,8 @@ ul.wegallery-gallery li.wegal-thumb img {
   margin: 0 20px 20px 0;
   padding: 0;
   max-width: 100%;
+  width: 90%;
+  height: auto;
 }
 ul.wegallery-gallery.wegal-col-2 li {
   width: 50%;
