--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -8,7 +8,7 @@ ul.wegallery-gallery {
     .clearfix();
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0 10px;
     overflow: hidden;
     width: 100%;
 
@@ -24,6 +24,8 @@ ul.wegallery-gallery {
             margin: 0 20px 20px 0;
             padding: 0;
             max-width: 100%;
+            width: 90%;
+            height: auto;
         }
     }
 
