--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -69,6 +69,30 @@ ul.wegallery-gallery {
     }
 }
 
+.wegal-flex-caption {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.6);
+    bottom: 0;
+    color: #FFFFFF;
+    font-size: 14px;
+    left: 0;
+    line-height: 18px;
+    position: absolute;
+    text-align: center;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
+    width: 100%;
+    padding: 2%;
+
+    h3 {
+        color: #fff;
+        margin: 0;
+        padding: 0;
+    }
+
+    .details {
+        padding-top: 10px;
+    }
+}
+
 /* Browser Resets
 *********************************/
 .flex-container a:active,
@@ -96,7 +120,7 @@ ul.wegallery-gallery {
 /* FlexSlider Necessary Styles
 *********************************/
 .wegal-flexslider {margin: 0; padding: 0;}
-.wegal-flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
+.wegal-flexslider .slides > li {display: none; -webkit-backface-visibility: hidden; position: relative;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .wegal-flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
 
