--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -69,7 +69,7 @@ ul.wegallery-gallery {
     }
 }
 
-.wegal-flex-caption {
+.wegal-gallery-wrap .wegal-flex-caption {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0.6);
     bottom: 0;
     color: #FFFFFF;
@@ -105,7 +105,7 @@ ul.wegallery-gallery {
 .wegal-flexslider a:focus  {outline: none;}
 .slides,
 .flex-control-nav,
-.flex-direction-nav {margin: 0; padding: 0; list-style: none;}
+.flex-direction-nav {margin: 0; padding: 0; list-style: none !important;}
 
 /* Icon Fonts
 *********************************/
@@ -124,7 +124,7 @@ ul.wegallery-gallery {
 /* FlexSlider Necessary Styles
 *********************************/
 .wegal-flexslider {margin: 0; padding: 0;}
-.wegal-flexslider .slides > li {display: none; -webkit-backface-visibility: hidden; position: relative;} /* Hide the slides before the JS is loaded. Avoids image jumping */
+.wegal-flexslider .slides > li {display: none; -webkit-backface-visibility: hidden; position: relative; margin: 0 !important;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .wegal-flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
 
@@ -140,46 +140,72 @@ html[xmlns] .slides {display: block;}
 
 /* FlexSlider Default Theme
 *********************************/
-.wegal-flexslider { margin: 0 0 60px; background: #fff; border: 4px solid #fff; position: relative; -webkit-border-radius: 4px; -moz-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; zoom: 1; }
-.flex-viewport { max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease; }
+.wegal-flexslider { margin: 0 0 60px; background: #fff; border: none; position: relative; -webkit-border-radius: 0; -moz-border-radius: 0; -o-border-radius: 0; border-radius: 0; zoom: 1; }
+.wegal-flexslider .flex-viewport { max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease; }
 .loading .flex-viewport { max-height: 300px; }
 .wegal-flexslider .slides { zoom: 1; }
-.carousel li { margin-right: 5px; }
+.wegal-flexslider .carousel li { margin-right: 5px; }
 
 /* Direction Nav */
-.flex-direction-nav {*height: 0;}
-.flex-direction-nav a  { display: block; width: 40px; height: 40px; margin: -20px 0 0; position: absolute; top: 50%; z-index: 10; overflow: hidden; opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8); text-shadow: 1px 1px 0 rgba(255,255,255,0.3); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease; }
-.flex-direction-nav .flex-prev { left: -50px; }
-.flex-direction-nav .flex-next { right: -50px; text-align: right; }
-.wegal-flexslider:hover .flex-prev { opacity: 0.7; left: 10px; }
-.wegal-flexslider:hover .flex-next { opacity: 0.7; right: 10px; }
+.wegal-flexslider .flex-direction-nav {*height: 0;}
+.wegal-flexslider .flex-direction-nav a  {
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin: -20px 0 0;
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    overflow: hidden;
+    opacity: 0.7;
+    cursor: pointer;
+    color: rgba(0,0,0,0.8);
+    text-shadow: 1px 1px 0 rgba(255,255,255,0.3);
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+    background: rgba(0, 0, 0, 0.6);
+}
+.wegal-flexslider .flex-direction-nav .flex-prev { left: 0px; }
+.wegal-flexslider .flex-direction-nav .flex-next { right: 0px; text-align: right; }
+.wegal-flexslider:hover .flex-prev { opacity: 0.7; left: 0px; }
+.wegal-flexslider:hover .flex-next { opacity: 0.7; right: 0px; }
 .wegal-flexslider:hover .flex-next:hover, .wegal-flexslider:hover .flex-prev:hover { opacity: 1; }
-.flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
-.flex-direction-nav a:before  { font-family: "flexslider-icon"; font-size: 40px; display: inline-block; content: '\f001'; }
-.flex-direction-nav a.flex-next:before  { content: '\f002'; }
+.wegal-flexslider .flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
+.wegal-flexslider .flex-direction-nav a:before  {
+    font-family: "flexslider-icon";
+    font-size: 27px;
+    display: inline-block;
+    content: '\f001';
+    padding: 0 8px 0 0;
+    color: #fff;
+    text-shadow: none;
+}
+.wegal-flexslider .flex-direction-nav a.flex-next:before  { content: '\f002'; }
+.wegal-flexslider .flex-direction-nav a.flex-prev:before  { padding: 0 0 0 8px; }
 
 /* Pause/Play */
-.flex-pauseplay a { display: block; width: 20px; height: 20px; position: absolute; bottom: 5px; left: 10px; opacity: 0.8; z-index: 10; overflow: hidden; cursor: pointer; color: #000; }
-.flex-pauseplay a:before  { font-family: "flexslider-icon"; font-size: 20px; display: inline-block; content: '\f004'; }
-.flex-pauseplay a:hover  { opacity: 1; }
-.flex-pauseplay a.flex-play:before { content: '\f003'; }
+.wegal-flexslider .flex-pauseplay a { display: block; width: 20px; height: 20px; position: absolute; bottom: 5px; left: 10px; opacity: 0.8; z-index: 10; overflow: hidden; cursor: pointer; color: #000; }
+.wegal-flexslider .flex-pauseplay a:before  { font-family: "flexslider-icon"; font-size: 20px; display: inline-block; content: '\f004'; }
+.wegal-flexslider .flex-pauseplay a:hover  { opacity: 1; }
+.wegal-flexslider .flex-pauseplay a.flex-play:before { content: '\f003'; }
 
 /* Control Nav */
-.flex-control-nav {width: 100%; position: absolute; bottom: -40px; text-align: center;}
-.flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; *display: inline;}
-.flex-control-paging li a {width: 11px; height: 11px; display: block; background: #666; background: rgba(0,0,0,0.5); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -moz-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -o-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); box-shadow: inset 0 0 3px rgba(0,0,0,0.3); }
-.flex-control-paging li a:hover { background: #333; background: rgba(0,0,0,0.7); }
-.flex-control-paging li a.flex-active { background: #000; background: rgba(0,0,0,0.9); cursor: default; }
+.wegal-flexslider .flex-control-nav {width: 100%; position: absolute; bottom: -40px; text-align: center;}
+.wegal-flexslider .flex-control-nav li {margin: 0 6px !important; display: inline-block; zoom: 1; *display: inline;}
+.wegal-flexslider .flex-control-paging li a {width: 11px; height: 11px; display: block; background: #666; background: rgba(0,0,0,0.5); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -moz-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -o-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); box-shadow: inset 0 0 3px rgba(0,0,0,0.3); }
+.wegal-flexslider .flex-control-paging li a:hover { background: #333; background: rgba(0,0,0,0.7); }
+.wegal-flexslider .flex-control-paging li a.flex-active { background: #000; background: rgba(0,0,0,0.9); cursor: default; }
 
-.flex-control-thumbs {margin: 5px 0 0; position: static; overflow: hidden;}
-.flex-control-thumbs li {width: 25%; float: left; margin: 0;}
-.flex-control-thumbs img {width: 100%; display: block; opacity: .7; cursor: pointer;}
-.flex-control-thumbs img:hover {opacity: 1;}
-.flex-control-thumbs .flex-active {opacity: 1; cursor: default;}
+.wegal-flexslider .flex-control-thumbs {margin: 5px 0 0; position: static; overflow: hidden;}
+.wegal-flexslider .flex-control-thumbs li {width: 25%; float: left; margin: 0;}
+.wegal-flexslider .flex-control-thumbs img {width: 100%; display: block; opacity: .7; cursor: pointer;}
+.wegal-flexslider .flex-control-thumbs img:hover {opacity: 1;}
+.wegal-flexslider .flex-control-thumbs .flex-active {opacity: 1; cursor: default;}
 
 @media screen and (max-width: 860px) {
-  .flex-direction-nav .flex-prev { opacity: 1; left: 10px;}
-  .flex-direction-nav .flex-next { opacity: 1; right: 10px;}
+  .wegal-flexslider .flex-direction-nav .flex-prev { opacity: 1; left: 10px;}
+  .wegal-flexslider .flex-direction-nav .flex-next { opacity: 1; right: 10px;}
 }
 
 /**
